[gd_scene load_steps=21 format=3 uid="uid://boiqm84g6cm77"]

[ext_resource type="Script" uid="uid://ctj5grkwiab3a" path="res://scenes/objects/operator/operator.gd" id="1_bqpnd"]
[ext_resource type="Texture2D" uid="uid://bjiby4kvy2kwu" path="res://assets/MathOperator.png" id="1_xs7on"]
[ext_resource type="Script" uid="uid://ck6y410gncrcr" path="res://scripts/mouse_interaction_area2d.gd" id="2_r1olv"]
[ext_resource type="PackedScene" uid="uid://dfddi1aiqq1ad" path="res://scenes/utils/grabbable.tscn" id="3_bqpnd"]
[ext_resource type="PackedScene" uid="uid://khx12i77qfms" path="res://scenes/utils/object_popup_menu.tscn" id="4_fthne"]
[ext_resource type="PackedScene" uid="uid://dm2dffmkn1e7t" path="res://scenes/objects/activation/activation.tscn" id="5_0iqj6"]
[ext_resource type="Script" uid="uid://cwhvnxwvdhkh5" path="res://scenes/objects/movement/number_movement.gd" id="6_1qald"]
[ext_resource type="Script" uid="uid://dlvvya7tvw7y1" path="res://scripts/resources/ObjectPopupMenuItem.gd" id="6_4deob"]
[ext_resource type="Texture2D" uid="uid://d3x5ev60k0grs" path="res://assets/MenuIcons/Plus.png" id="7_qp6pp"]
[ext_resource type="PackedScene" uid="uid://bjwa7poyvyxhu" path="res://scenes/utils/connection_area.tscn" id="7_r0akj"]
[ext_resource type="Texture2D" uid="uid://ds1n8gywbc5e3" path="res://assets/MenuIcons/Minus.png" id="8_uj48i"]
[ext_resource type="Texture2D" uid="uid://dqgji8yxmdsvw" path="res://assets/MenuIcons/Multi.png" id="9_8fhei"]
[ext_resource type="Texture2D" uid="uid://tdsqf6lebyt1" path="res://assets/MenuIcons/Divide.png" id="10_e1413"]
[ext_resource type="Texture2D" uid="uid://cleilk2cl12k2" path="res://assets/MenuIcons/TrashCan.png" id="11_6nfnd"]

[sub_resource type="SystemFont" id="SystemFont_bqpnd"]
font_names = PackedStringArray("Monospace")
font_weight = 550
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_fthne"]
font = SubResource("SystemFont_bqpnd")
font_size = 48
font_color = Color(0.901961, 0.901961, 0.941176, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ehaq0"]
radius = 32.0
height = 192.0

[sub_resource type="Resource" id="Resource_8la15"]
script = ExtResource("6_4deob")
frames = Array[Texture2D]([ExtResource("7_qp6pp"), ExtResource("8_uj48i"), ExtResource("9_8fhei"), ExtResource("10_e1413")])
text = ""
initial_frame = 0
metadata/_custom_type_script = "uid://dlvvya7tvw7y1"

[sub_resource type="Resource" id="Resource_hejjw"]
script = ExtResource("6_4deob")
frames = Array[Texture2D]([ExtResource("11_6nfnd")])
text = "Delete"
initial_frame = 0
metadata/_custom_type_script = "uid://dlvvya7tvw7y1"

[sub_resource type="CircleShape2D" id="CircleShape2D_4deob"]
radius = 32.0

[node name="Operator" type="Node2D"]
script = ExtResource("1_bqpnd")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_xs7on")

[node name="SignLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "+"
label_settings = SubResource("LabelSettings_fthne")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MouseInteractionArea2D" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 0
script = ExtResource("2_r1olv")
metadata/_custom_type_script = "uid://ck6y410gncrcr"

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseInteractionArea2D"]
visible = false
rotation = 1.57079
shape = SubResource("CapsuleShape2D_ehaq0")

[node name="Traits" type="Node" parent="."]

[node name="Grabbable" parent="Traits" node_paths=PackedStringArray("parent", "interaction_area") instance=ExtResource("3_bqpnd")]
parent = NodePath("../..")
interaction_area = NodePath("../../MouseInteractionArea2D")

[node name="ObjectPopupMenu" parent="Traits" node_paths=PackedStringArray("interaction_area") instance=ExtResource("4_fthne")]
unique_name_in_owner = true
items = Array[ExtResource("6_4deob")]([SubResource("Resource_8la15"), SubResource("Resource_hejjw")])
interaction_area = NodePath("../../MouseInteractionArea2D")

[node name="Activation" parent="Traits" node_paths=PackedStringArray("target") instance=ExtResource("5_0iqj6")]
target = NodePath("../..")
trigger_signals = Array[String](["ready_for_result"])
base_delay = 1.0
auto = false

[node name="Number1Movement" type="Node" parent="Traits" node_paths=PackedStringArray("root")]
script = ExtResource("6_1qald")
root = NodePath("../..")
sends = false
metadata/_custom_type_script = "uid://cwhvnxwvdhkh5"

[node name="Number2Movement" type="Node" parent="Traits" node_paths=PackedStringArray("root")]
script = ExtResource("6_1qald")
root = NodePath("../..")
sends = false
metadata/_custom_type_script = "uid://cwhvnxwvdhkh5"

[node name="ResultMovement" type="Node" parent="Traits" node_paths=PackedStringArray("root")]
unique_name_in_owner = true
script = ExtResource("6_1qald")
root = NodePath("../..")
receives = false
metadata/_custom_type_script = "uid://cwhvnxwvdhkh5"

[node name="Number1Connection" parent="." node_paths=PackedStringArray("number_movement") instance=ExtResource("7_r0akj")]
position = Vector2(-64, 0)
sends = false
number_movement = NodePath("../Traits/Number1Movement")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Number1Connection"]
visible = false
shape = SubResource("CircleShape2D_4deob")

[node name="Number2Connection" parent="." node_paths=PackedStringArray("number_movement") instance=ExtResource("7_r0akj")]
position = Vector2(64, 0)
sends = false
number_movement = NodePath("../Traits/Number2Movement")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Number2Connection"]
visible = false
shape = SubResource("CircleShape2D_4deob")

[node name="ResultConnection" parent="." node_paths=PackedStringArray("number_movement") instance=ExtResource("7_r0akj")]
receives = false
number_movement = NodePath("../Traits/ResultMovement")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResultConnection"]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ehaq0")

[node name="ActivationConnection" parent="." node_paths=PackedStringArray("activatable") instance=ExtResource("7_r0akj")]
collision_layer = 8
activatable = NodePath("../Traits/Activation")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationConnection"]
visible = false
rotation = 1.57079
shape = SubResource("CapsuleShape2D_ehaq0")

[connection signal="clicked_option" from="Traits/ObjectPopupMenu" to="." method="_on_menu_clicked_option"]
[connection signal="activated" from="Traits/Activation" to="." method="activate"]
[connection signal="number_received" from="Traits/Number1Movement" to="." method="_on_number_1_received"]
[connection signal="number_received" from="Traits/Number2Movement" to="." method="_on_number_2_received"]
[connection signal="requesting_move" from="Traits/ResultMovement" to="." method="activate"]
